<resources>
    <string name="app_name">College Tracker</string>
    <string name="frame_layout">Frame Layout here</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_create_timetable">CreateTimetable</string>
    <string name="add_subject_button_text">Add a subject/course</string>
    <string name="course_header">Course Details</string>
    <string name="course_name">Course name : </string>
    <string name="course_shorthand">Course short-hand : </string>
    <string name="course_shorthand_hint">A small abbreviation of subject name : </string>
    <string name="course_credits">Course credits : </string>
    <string name="course_professor">Course Professor : </string>>
    <string name="save_button_text">Save and Proceed </string>
    <string name="add_lectures_text_view">Add lectures </string>
    <string name="lecture_day"> Day of lecture </string>
    <string name="start_time"> 00:00 </string>
    <string name="end_time">01:00</string>
    <string name="add_lecture_button">+</string>
    <string name="time_picker_title">Select Time</string>
    <string name="lecture_list_header">The following courses have been added: </string>
    <string name="Monday">M</string>>
    <string name="Tuesday">T</string>>
    <string name="Wednesday">W</string>>
    <string name="Thursday">T</string>>
    <string name="Friday">F</string>>
    <string name="Saturday">S</string>>
    <string name="Sunday">S</string>>
    <string name="Monday_land">MON</string>>
    <string name="Tuesday_land">TUE</string>>
    <string name="Wednesday_land">WED</string>>
    <string name="Thursday_land">THU</string>>
    <string name="Friday_land">FRI</string>>
    <string name="Saturday_land">SAT</string>>
    <string name="Sunday_land">SUN</string>>

    <!--<string-array name="days_of_week">-->
    <!--<item>Monday</item>-->
    <!--<item>Tuesday</item>-->
    <!--<item>Wednesday</item>-->
    <!--<item>Thursday</item>-->
    <!--<item>Friday</item>-->
    <!--<item>Saturday</item>-->
    <!--<item>Sunday</item>-->
    <!--</string-array>-->
</resources>
