<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context="com.vjti.collegetracker.GetSubjectActivity">

        <TextView
            style="@style/AppTheme.fontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/course_header"
            android:textAlignment="center" />

        <TextView
            style="@style/AppTheme.fontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_name" />

        <EditText
            android:id="@+id/course_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:inputType="text"/>

        <TextView
            style="@style/AppTheme.fontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_credits" />

        <EditText
            android:id="@+id/course_credits_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingBottom="8dp" />

        <TextView
            style="@style/AppTheme.fontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_shorthand" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_shorthand_hint"
            android:paddingBottom="8dp" />

        <TextView
            style="@style/AppTheme.fontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_professor" />

        <EditText
            android:id="@+id/course_professor_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:inputType="text"/>

        <TextView
            style="@style/AppTheme.fontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_lectures_text_view" />

        <LinearLayout
            android:id="@+id/lectures_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/lecture_1_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/lecture_day"
                    android:paddingBottom="8dp"
                    android:paddingRight="8dp" />

                <EditText
                    android:id="@+id/lecture_1_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_time"
                    android:inputType="time"
                    android:paddingBottom="8dp"
                    android:paddingRight="4dp" />

                <EditText
                    android:id="@+id/lecture_1_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_time"
                    android:inputType="time"
                    android:paddingBottom="8dp"
                    android:paddingRight="4dp" />

                <Button
                    android:id="@+id/add_lecture_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:text="@string/add_lecture_button" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save_button_text"
            tools:text="Save and Proceed" />

    </LinearLayout>
</ScrollView>